# ChatGPT-Token-Usage-Pre-Calculator

./: Dockerfile  README.md  SettingLoader.py  main.py  makefile  pyproject.toml
config/: menu.json
