[tool.poetry]
name = "chatgpt-token-calculator"
version = "0.0.1"
description = "You can use this project to know how many tokens the prompts used."
authors = ["liuliu <liuliugit@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.3.0"
simple-term-menu = "^1.6.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
